Bugfix: logo handling improved * add to home screen works on iOS * cleaner logo svg

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,6 +16,7 @@ code {
 html, body {
   max-width: 100%;
   height: 100%;
+  background-color: #FDCA64;
 }
 
 #root {
